--- a/src/index.scss
+++ b/src/index.scss
@@ -162,9 +162,12 @@ body{
 
     & * > .tweet-wrap {
                   
-      // width: 30vw;
+      width: 30vw;
       // aspect-ratio: 352.08/96.01;
       // max-height: 15vh;
+      @media only screen and (max-width: 600px) {
+        width: 60vw;
+      }
       
       background: #fff;
       margin-top: 0%;
@@ -180,8 +183,15 @@ body{
       align-items:flex-start;
       font-size:  min(0.9vw, 1.5vh);
       width: 27vw;
-      aspect-ratio: 316.86/53.38;
-      max-height: 6vh;
+      @media only screen and (max-width: 600px) {
+        width: 54vw;
+        font-size:  min(1.5vw, 0.5rem);
+      }
+      @media only screen and (min-width: 600px) {
+        aspect-ratio: 316.86/53.38;
+        max-height: 6vh;
+      }
+
 
       .avator{
         border-radius: max(4vw, 8vh);
@@ -190,6 +200,10 @@ body{
         max-width: 3.5vw;
         width: auto;
         height: auto;
+        @media only screen and (max-width: 600px) {
+          max-height: 12vh;
+          max-width: 6vw;
+        }
         aspect-ratio: 1/1;
       }
       
@@ -222,6 +236,10 @@ body{
             width: auto;
             height: auto;
             border-radius: 5%;
+            @media only screen and (max-width: 600px) {
+              max-width:20vw;
+              max-height:8vh;
+            }
           }
           .content_vid{
             display: block;
@@ -230,6 +248,10 @@ body{
             width: auto;
             height: auto;          
             border-radius: 5%;
+            @media only screen and (max-width: 600px) {
+              max-width:20vw;
+              max-height:8vh;
+            }
           }
         }
     }
@@ -243,6 +265,12 @@ body{
       margin-left: min(6vw, 8vh);
       margin-top: min(0.6vw, 1.5vh);
       font-size: min(0.9vw, 1.5vh);
+      @media only screen and (max-width: 600px) {
+        margin-left: min(10vw, 14vh);
+        margin-top: min(0.2vw, 0.2vh);
+        font-size: min(1.5vw, 0.5rem);
+        height: 2vw;
+      }
 
       width: 81.48%;
       div {
@@ -252,6 +280,11 @@ body{
               margin-right: 20%;
               width: 20%;
               max-height: 100%;
+              @media only screen and (max-width: 600px) {
+                margin-right: 20%;
+                width: 20%;
+                max-height: 100%;
+              }
           }
       }
       .message {
@@ -268,6 +301,8 @@ body{
 
     //INTRO SECTION CSS
     .intro_section{
+      
+      overflow-x: hidden;
       .scroll_div_show{
         position: absolute;
         display: flex;
@@ -289,7 +324,7 @@ body{
           padding-right: 0.5vw;
           border-radius: 0.4vw;
           @media only screen and (max-width: 600px) {
-            font-size: 1.1rem;
+            font-size: min(1.1rem,5vmin);
             padding-left: 1rem;
             padding-right: 1rem;
             border-radius: 5px;
@@ -513,21 +548,26 @@ body{
       display: flex;
         align-items: end;
         justify-content: center;
+      @media only screen and (max-width: 600px) {
+        height: 20vh;
+      }
 
       .padding_text{
 
         margin-left: 25%;
         margin-right: 25%;
-        @media only screen and (max-width: 600px) {
-          font-size: 2.5vmin;
-          margin-left: 10%;
-          margin-right: 10%;
-        }
+
         
         color: rgb(78, 78, 78);
         font-size: 2.2vmin;
         line-height: 3.4vmin;
         z-index: 10;
+        @media only screen and (max-width: 600px) {
+          font-size:  min(2rem,2.4vmin); 
+          height: 20vh;
+          margin-left: 10%;
+          margin-right: 10%;
+        }
         .timeline_scale_inline{
           display: inline;
           height: 4vmin;
@@ -642,9 +682,16 @@ body{
                         color: rgb(78, 78, 78);
                         background-color:rgba(255, 255, 255, 0.8);
                         padding: 5px;
+                        
                         font-size: 1.7vmin;
+                        @media only screen and (max-width: 600px) {
+                          font-size: min(2.3vmin,1.7rem);
+                        }
                         .timeline_date{
                           font-size: 2.1vmin;
+                          @media only screen and (max-width: 600px) {
+                            font-size: min(2.8vmin,2.1rem);
+                          }
                         }
                         
                     }
@@ -798,7 +845,7 @@ body{
           @media only screen and (max-width: 600px) {
             height: 45vh;
             width: 90%;
-            font-size: 3.5vmin;
+            font-size: min(2.7vmin,0.75rem);
           }
           color: white;
           display: flex;
@@ -835,7 +882,7 @@ body{
         }
         @media only screen and (max-width: 600px) {
           height: 50vh;
-          width: 100vw;
+          width: 90vw;
           position: sticky;         
           order: 2;
           top:50%;
@@ -845,9 +892,7 @@ body{
         
 
         .tweet-wrap{
-          @media only screen and (max-width: 600px) {
-            width: 90%;
-          }
+          
         .svg_wrap_name{
           position: absolute;
           z-index: 20;
@@ -924,7 +969,7 @@ body{
             font-size: 2.3vmin;
             @media only screen and (max-width: 600px) {
               height: 90%;
-              font-size: 4vmin;
+              font-size: min(3vmin,0.9rem);
             }
             .bar1{
               flex-direction: column;
@@ -1023,7 +1068,7 @@ body{
             font-size: 3.5vmin;
             @media only screen and (max-width: 600px) {
               height: 70%;
-              font-size: 5vmin;
+              font-size: min(4vmin,1.1rem);
             }
             width: 100%;
             position: relative;
@@ -1084,7 +1129,7 @@ body{
           width: 100vw;
           order: 2;
           top:50%;
-          font-size: 5vmin;
+          font-size: min(5vmin,1.1rem); 
           margin-top: -50vh;
         }
         .viral_text{
@@ -1170,7 +1215,7 @@ body{
               width: 100%;
             }
             .onboarding_tweet_bg{
-              height: 98%;
+              height: 100%;
               width: 100%;
               background-color: #1DA1F2;
 
@@ -1241,8 +1286,9 @@ body{
           font-size: 3vmin;
           line-height: 5vmin;        
           @media only screen and (max-width: 600px) {
-            
-            font-size: 4vmin;
+            margin-left: 10%;
+            margin-right: 10%;
+            font-size: min(2.9vmin,2rem);
             
             line-height: 6vmin;
           }
@@ -1348,7 +1394,7 @@ body{
             font-size: 3.5vmin;  
             @media only screen and (max-width: 600px) {
 
-              font-size: 5vmin;
+              font-size: min(2.9vmin,2rem);
             }
 
             
@@ -1377,8 +1423,8 @@ body{
         font-size: 3vmin;
         line-height: 9vmin;
         @media only screen and (max-width: 600px) {
-          font-size: 6vmin;
-          line-height: 12vmin;
+          font-size: min(3.5vmin,2rem);
+          line-height: 5vmin;
         }
       }
       .demotion_slider_container{
@@ -1506,7 +1552,8 @@ body{
           font-size: 3vmin;
           line-height: 4vmin;
           @media only screen and (max-width: 600px) {
-            font-size: 5vmin;
+
+            font-size: min(5vmin,1.1rem);
             line-height: 6vmin;
           }
           text-align: center;
@@ -1540,6 +1587,9 @@ body{
       background-color: #1DA1F2;
       .algorithm_tweet_container{
         width: 30vw;
+        @media only screen and (max-width: 600px) {
+          width: 60vw;
+        }
         margin: 5%
       }
       .algorithm_text{
@@ -1548,7 +1598,7 @@ body{
         color: white;
         font-size: 3vmin;
         @media only screen and (max-width: 600px) {
-          font-size: 5vmin;
+          font-size: min(3.6vmin,2rem);
           margin-left: 10%;
           margin-right: 10%;
         }
@@ -1562,19 +1612,24 @@ body{
     
     .outro_section{
       height: 100vh;
-      
+      overflow-x: hidden;
       width: 100vw;
       color: rgb(78, 78, 78);
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
+      @media only screen and (max-width: 600px) {
+        height: 60vh;
+      
+    }
       .outro_text{
         width: 100vw;
         
         font-size: 3.5vmin;
         @media only screen and (max-width: 600px) {
-          font-size: 6vmin;
+            font-size: min(3.5vmin,2rem);
+          
         }
 
         margin: 5%;
@@ -1586,7 +1641,9 @@ body{
         
         font-size: 2vmin;
         @media only screen and (max-width: 600px) {
-          font-size: 6vmin;
+            font-size: min(3.5vmin,2rem);
+          
+        
         }
 
         margin: 5%;
@@ -1620,10 +1677,11 @@ body{
           height: 45vh;
           width: 30vw;
           @media only screen and (max-width: 600px) {
-            width: 80vw;
+            width: 60vw;
+            height: 20vh;
           }
           color: #1d84c3; /* blue colors for links too */
-
+          
           display: flex;
           flex-direction: column;
           align-items: center;
@@ -1633,7 +1691,7 @@ body{
 
             line-height: 3vmin;
             @media only screen and (max-width: 600px) {
-              font-size: 6vmin;
+              font-size: min(3vmin,1.7rem);
               line-height: 6vmin;
             }
             margin: 3%;
@@ -1650,7 +1708,7 @@ body{
               font-size:  min(0.9vw, 1.5vh);
               width: 27vw;
               @media only screen and (max-width: 600px) {
-                width: 72vw
+                width: 60vw
               }
               aspect-ratio: 316.86/53.38;
         
@@ -1679,6 +1737,7 @@ body{
 
     .menu_section{
       
+      overflow-x: hidden;
       height: 100vh;
       width: 100vw;
       @media only screen and (max-width: 600px) {
@@ -1738,7 +1797,7 @@ body{
                 text-decoration: none;
                 height: 100%;
                 width: 100%;
-                border-radius: 20px;
+                border-radius: 1vw;
                 @media only screen and (max-width: 600px) {
                   display: flex;
                   justify-content: center;
@@ -1756,7 +1815,7 @@ body{
                 width: auto;
                 aspect-ratio: 2.5/1;
 
-                border-radius: 20px;
+                border-radius: 1vw;
 
                 color: white;
                 z-index: 3;
@@ -1766,7 +1825,7 @@ body{
                 font-size: 2.2vmin;
                 @media only screen and (max-width: 600px) {
                   border-radius: 5px;
-                  font-size: 1.5vmin;
+                  font-size: min(1.5vmin,2.1rem);
                 }
                 text-decoration: none;
 
@@ -1790,6 +1849,9 @@ body{
           height: 50%;
           width: 80%;
           font-size: 3.5vmin;
+          @media only screen and (max-width: 600px) {
+            font-size: min(2.8vmin,2.1rem);
+          }
         }
         
       }
