--- a/src/index.scss
+++ b/src/index.scss
@@ -704,6 +704,10 @@ body{
                       width:30vw;
                       margin-right: 4%;
                       text-align: left;
+                      @media only screen and (max-width: 600px) {
+                        width:60vw;
+                        margin-right: -11%;
+                      }
 
                     }
                     .timeline_text{
@@ -717,7 +721,11 @@ body{
                     .tweet-wrap{
                       
                       width:30vw;
-                      margin-left: 1%;         
+                      margin-left: 1%;     
+                      @media only screen and (max-width: 600px) {
+                        width:53vw;
+                        margin-left: -4%;
+                      }    
                     }
                     .timeline_text{
                       text-align: right;
@@ -885,7 +893,7 @@ body{
           width: 90vw;
           position: sticky;         
           order: 2;
-          top:50%;
+          top:50vh;
           margin-top: -50vh;
         }
         
@@ -911,6 +919,12 @@ body{
             margin-left: -0.2vw;
             width: 20vw;
             height: 20vw;
+            @media only screen and (max-width: 600px) {
+              margin-top: -19.4vw;
+              margin-left: -0.2vw;
+              width: 40vw;
+              height: 40vw;
+            }
           }
           }
         }
@@ -945,7 +959,7 @@ body{
           width: 100%;
           order: 2;
           position: sticky;
-          top:50%;
+          top:50vh;
           margin-top: -50vh;
         }
         .bars_sticky{
@@ -1148,7 +1162,7 @@ body{
               width: 80vw;
               margin-left: 10vw;
               margin-right: 10vw;
-              top: 50%;
+              top: 50vh;
             }
             display: flex;
             align-items: center;
@@ -1335,15 +1349,19 @@ body{
             top:0;
           }
           @media only screen and (max-width: 600px) {
-            height: 50vh;
+            height: 60vh;
             width: 100vw;
             order: 2;
-            top:50%;
-            margin-top: -50vh;
+            top:40vh;
+            margin-top: -60vh;
           }
           .demotion_tweet_div_sticky{
             height: 90%;
             width: 90%;
+            @media only screen and (max-width: 600px) {
+              height: 100%;
+              width: 100%;
+            }
             background-color: #1DA1F2;
             display: flex;
             flex-direction: column;
@@ -1383,10 +1401,10 @@ body{
           }
           color: rgb(78, 78, 78);
           @media only screen and (max-width: 600px) {
-            height: 50vh;
+            height: 40vh;
             width: 100vw;
             order: 1;
-            margin-bottom: 50vh;
+            margin-bottom: 60vh;
           }
           .demotion_text_div_sticky{
             height: 70%;
@@ -1658,7 +1676,7 @@ body{
         
         width: 30vw;
         @media only screen and (max-width: 600px) {
-          width: 80vw;
+          width: 60vw;
         }
         display: flex;
         align-items: center;
@@ -1678,7 +1696,7 @@ body{
           width: 30vw;
           @media only screen and (max-width: 600px) {
             width: 60vw;
-            height: 20vh;
+            height: 25vh;
           }
           color: #1d84c3; /* blue colors for links too */
           
@@ -1708,7 +1726,9 @@ body{
               font-size:  min(0.9vw, 1.5vh);
               width: 27vw;
               @media only screen and (max-width: 600px) {
-                width: 60vw
+                
+                font-size:  min(1.5vw, 0.5rem);
+                width: 56vw
               }
               aspect-ratio: 316.86/53.38;
         
@@ -1718,8 +1738,9 @@ body{
                   max-height: 8vh;
                   max-width: 4vw;
                   @media only screen and (max-width: 600px) {
-                    max-height: 18vh;
-                    max-width: 14vw;
+                      max-height: 12vh;
+                      max-width: 6vw;
+                    
                   }
                   width: auto;
                   height: auto;
