--- a/src/index.scss
+++ b/src/index.scss
@@ -301,6 +301,8 @@ body{
 
     //INTRO SECTION CSS
     .intro_section{
+      
+      overflow-y: hidden;
       overflow-x: hidden;
       .scroll_div_show{
         position: absolute;
@@ -309,7 +311,7 @@ body{
         justify-content: center;
         z-index: 99;
         left: 48.2%;
-        top: 64.28%;
+        top: 95.28%;
         @media only screen and (max-width: 961px) {
           top: 58%;
           left: 39.8%;
@@ -334,7 +336,7 @@ body{
     scroll-snap-align: start;
     
     position: relative;
-    height: 140vh;
+    height: 100vh;
     z-index: 0;
     background-color: #1DA1F2;
       .parallax_layer{
@@ -375,13 +377,13 @@ body{
       }
       .front_intro{
           z-index: 2;
-          height: 140vh;
+          height: 100vh;
           width: 100vw;
           .main_text{
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height:70vh;
             width: 100vw;
             position: relative;
             span.banner_txt{
@@ -396,7 +398,7 @@ body{
           }
           
           .logos{
-            height: 40vh;
+            height: 30vh;
             width: 100vw;
             position: relative;
             display: flex;
@@ -414,7 +416,7 @@ body{
             }
             
             li {
-              height: 40vh;
+              height: 30vh;
               width: 20vw;
               flex-grow: 1;
               display: flex;
