--- a/src/index.scss
+++ b/src/index.scss
@@ -67,7 +67,7 @@ body{
       // aspect-ratio: 352.08/96.01;
       // max-height: 15vh;
       @media only screen and (max-width: 961px) and (orientation: portrait) {
-        width: 60vw;
+        width: 80vw;
       }
       
       background: #fff;
@@ -86,8 +86,8 @@ body{
       font-size:  min(0.9vw, 1.5vh);
       width: 27vw;
       @media only screen and (max-width: 961px) and (orientation: portrait) {
-        width: 54vw;
-        font-size:  min(1.5vw, 0.5rem);
+        width: 70vw;
+        font-size:  min(2.1vw, 1.5rem);
       }
 
 
@@ -103,7 +103,7 @@ body{
         
         @media only screen and (max-width: 961px) and (orientation: portrait) {
           max-height: 12vh;
-          max-width: 6vw;
+          max-width: 10vw;
         }
         aspect-ratio: 1/1;
       }
@@ -141,8 +141,8 @@ body{
             height: auto;
             border-radius: 5%;
             @media only screen and (max-width: 961px) and (orientation: portrait) {
-              max-width:20vw;
-              max-height:8vh;
+              max-width:25vw;
+              max-height:10vh;
             }
           }
           .content_vid{
@@ -154,8 +154,8 @@ body{
             height: auto;          
             border-radius: 5%;
             @media only screen and (max-width: 961px) and (orientation: portrait) {
-              max-width:20vw;
-              max-height:8vh;
+              max-width:35vw;
+              max-height:15vh;
             }
           }
         }
@@ -175,28 +175,29 @@ body{
         margin-left: min(10vw, 14vh);
         margin-top: min(0.2vw, 0.2vh);
         font-size: min(1.5vw, 0.5rem);
-        height: 2vw;
+        height: 3vw;
+        font-size:  min(2.1vw, 1.5rem);
       }
 
-      width: 81.48%;
+      width: 90.00%;
       div {
-          width: 25.27%;
+          width: 35.27%;
           display: flex;
           svg {
               margin-right: 20%;
               width: 20%;
               max-height: 100%;
               @media only screen and (max-width: 961px) and (orientation: portrait) {
-                margin-right: 20%;
-                width: 20%;
+                margin-right: 10%;
+                width: 30%;
                 max-height: 100%;
               }
           }
       }
       .message {
-        width: 27.27%;
+        width: 35.27%;
         svg{
-          width: 25.64%;
+          width: 32.57%;
 
         }
         
@@ -213,8 +214,11 @@ body{
       scroll-snap-align: start;
       
       position: relative;
-      height: 100vh;
+      height: 120vh;
       z-index: 0;
+      @media only screen and (max-width: 961px) and (orientation: portrait) {
+        height: 100vh;
+      }
       background-color: #1DA1F2;
       .parallax_layer{
           position: absolute;
@@ -234,7 +238,7 @@ body{
                 top: 0;
                 height: 100vh;
                 @media only screen and (max-width: 961px) and (orientation: portrait) {
-                  height:90vh;
+                  height: 97vh;
                 }
                 pointer-events: none;
 
@@ -264,13 +268,17 @@ body{
             }
             position: relative;
             span.banner_txt{
-              
+              text-align: center;
               color: white;
               padding-top: 1.1rem;
               padding-bottom: 1.1rem;
               padding-left: 3rem;
               padding-right: 3rem;
-              font-size:3.5rem;
+              font-size:5rem;
+              @media only screen and (max-width: 961px) and (orientation: portrait) {
+                text-align: center;
+                font-size:4rem;
+              }
               letter-spacing: 4px;
 
               span.author_txt{
@@ -301,6 +309,7 @@ body{
           .logos{
             height: 30vh;
             width: 100vw;
+            margin-top: 6%;
             position: relative;
             display: flex;
             inset: 0;
@@ -317,11 +326,11 @@ body{
             }
             
             li {
-              height: 30vh;
-              width: 20vw;
+              height: 12vh;
+              width: 12vw;
               @media only screen and (max-width: 961px) and (orientation: portrait) {
-                height: 30vh;
-                width: 30vw;
+                height: 25vh;
+                width: 25vw;
               }
               flex-grow: 1;
               display: flex;
@@ -532,10 +541,17 @@ body{
                       margin-right: 4%;
                       text-align: left;
                       @media only screen and (max-width: 961px) and (orientation: portrait) {
-                        width:60vw;
-                        margin-right: -11%;
+                        width:55vw;
+                        margin-right: -6%;
                       }
+                      
 
+                    }
+                    .tweet-header-info{
+                      @media only screen and (max-width: 961px) and (orientation: portrait) {
+                        width:35vw;
+                        margin-right: -6%;
+                      }
                     }
                     .timeline_text{
                       left:51%;
@@ -553,6 +569,12 @@ body{
                         width:55vw;
                         margin-left: -5.9%;
                       }    
+                    }
+                    .tweet-header-info{
+                      @media only screen and (max-width: 961px) and (orientation: portrait) {
+                        width:40vw;
+                        margin-right: -6%;
+                      }
                     }
                     .timeline_text{
                       text-align: right;
@@ -594,7 +616,8 @@ body{
                       @media only screen and (max-width: 961px) and (orientation: portrait) {
                         margin-top: 12%;
                       }
-                      }
+                    }
+                    
                   }
                   .timeline_block:nth-child(5){
                     .timeline_text{
@@ -821,6 +844,10 @@ body{
           margin-left: 2%;
           width: 10%;
           height: 10%;
+          @media only screen and (max-width: 961px) and (orientation: portrait) {
+            width: 20%;
+          height: 20%;
+          }
         }
         .tweet-info-counts{
 
@@ -833,8 +860,8 @@ body{
             width: 20vw;
             height: 20vw;
             @media only screen and (max-width: 961px) and (orientation: portrait) {
-              margin-top: -19.4vw;
-              margin-left: -0.2vw;
+              margin-top: -18.4vw;
+              margin-left: 0.4vw;
               width: 40vw;
               height: 40vw;
             }
@@ -1042,7 +1069,6 @@ body{
     }
    
     .onboarding_section{
-      
       height: 500vh;
       width: 100vw;
       color: rgb(78, 78, 78);
@@ -1163,7 +1189,10 @@ body{
               width: 100%;
             }
             .onboarding_tweet_bg{
-              height: 100%;
+              height: 90%;
+              @media only screen and (max-width: 961px) and (orientation: portrait) {
+                height: 100%;
+              }
               width: 100%;
               background-color: #1DA1F2;
 
@@ -1366,6 +1395,8 @@ body{
       
       height: 80vh;
       width: 100vw;
+      
+      text-align: center;
       position: relative;
       @media only screen and (max-width: 961px) and (orientation: portrait) {
         height: 60vh;
@@ -1557,7 +1588,7 @@ body{
       .algorithm_tweet_container{
         width: 30vw;
         @media only screen and (max-width: 961px) and (orientation: portrait) {
-          width: 60vw;
+          width: 80vw;
         }
         margin: 5%
       }
@@ -1681,7 +1712,7 @@ body{
         
         width: 30vw;
         @media only screen and (max-width: 961px) and (orientation: portrait) {
-          width: 60vw;
+          width: 80vw;
         }
 
         display: flex;
@@ -1703,7 +1734,7 @@ body{
           width: 30vw;
 
           @media only screen and (max-width: 961px) and (orientation: portrait) {
-            width: 60vw;
+            width: 80vw;
             width: 35vh;
           }
           @media only screen and (max-width: 600px) {
@@ -1739,8 +1770,8 @@ body{
               width: 27vw;
               @media only screen and (max-width: 961px) and (orientation: portrait) {
                 
-                font-size:  min(1.5vw, 0.5rem);
-                width: 56vw
+                font-size:  min(2.1vw, 1.5rem);
+                width: 80vw
               }
               aspect-ratio: 316.86/53.38;
         
@@ -1751,7 +1782,7 @@ body{
                   max-width: 4vw;
                   @media only screen and (max-width: 961px) and (orientation: portrait) {
                       max-height: 12vh;
-                      max-width: 6vw;
+                      max-width: 10vw;
                     
                   }
                   width: auto;
@@ -1866,7 +1897,7 @@ body{
                   border-radius: 5px;
                   border: 0.75px solid #0b5684;
                   box-shadow: 0.35vh 0.55vh #0b5684;
-                  font-size: min(1.5vmin,2.1rem);
+                  font-size: max(1.5vmin,0.5rem);
                 }
                 text-decoration: none;
 
