--- a/src/index.scss
+++ b/src/index.scss
@@ -1940,11 +1940,11 @@ body{
                 z-index: 3;
               .menu_button{
                 background-color: #1d84c3;
-                max-height: 100%;
-                max-width: 100%;
-                height: auto;
-                width: auto;
-                aspect-ratio: 2.5/1;
+                height: 100%;
+                width: 100%;
+                // height: auto;
+                // width: auto;
+                // aspect-ratio: 2.5/1;
 
                 border-radius: 1vw;
                 
